idea/testData/checker/regression/AnnotationOnNamedParameterOfFunctionType.fir.kt
fun <K, V> intercept(block: (@<error descr="[UNRESOLVED_REFERENCE] Unresolved reference: A">A</error> key: K, (K) -> V) -> V) {

}
